--- a/src/app/admin-login/admin-login.component.html
+++ b/src/app/admin-login/admin-login.component.html
@@ -12,7 +12,7 @@
                     <input type="password" name="Password" id="" class="form-control">
                 </div>
                 <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
-                    <button class="btn btn-success">Login</button>
+                    <a href="/add" class="btn btn-success">Login</a>
                 </div>
             </div>
         </div>
