--- a/src/app/employee-add/employee-add.component.html
+++ b/src/app/employee-add/employee-add.component.html
@@ -1,3 +1,4 @@
+<app-navbar></app-navbar>
 <div class="container">
     <div class="row">
         <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
@@ -35,11 +36,9 @@
                     <input type="date" name="" id="" class="form-control">
                 </div>
                 <div class="col col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
-                    <button class="btn btn-success">Add</button>
+                    <button class="btn btn-success">Submit</button>
                 </div>
-                <div class="col col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
-                    <button class="btn btn-danger">Log Out</button>
-                </div>
+            
             </div>
         </div>
     </div>
