--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -22,7 +22,7 @@
             <a class="nav-link" routerLink="/view">View Employee</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="/login">Log Out</a>
+            <a class="nav-link" routerLink="/">Log Out</a>
           </li>
         </ul>
       </div>
