--- a/src/app/employee-view/employee-view.component.html
+++ b/src/app/employee-view/employee-view.component.html
@@ -1,4 +1,5 @@
 <app-navbar></app-navbar>
+
 <div class="container">
     <div class="row">
         <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
@@ -7,54 +8,20 @@
                   <tr>
                     <th scope="col">#</th>
                     <th scope="col">Employee Name</th>
-                    <th scope="col">Employee ID</th>
                     <th scope="col">Designation</th>
+                    <th scope="col">Salary</th>
+                    <th scope="col">Company</th>
                   </tr>
                 </thead>
                 <tbody>
-                  <tr>
+                  <tr *ngFor="let i of data">
                     <th scope="row">1</th>
-                    <td>Name1</td>
-                    <td>52</td>
-                    <td>BD</td>
+                    <td>{{i.name}}</td>
+                    <td>{{i.designation}}</td>
+                    <td>{{i.Salary}}</td>
+                    <td>{{i.company}}</td>
                   </tr>
-                  <tr>
-                    <th scope="row">2</th>
-                    <td>Name2</td>
-                    <td>74</td>
-                    <td>SD</td>
-                  </tr>
-                  <tr>
-                    <th scope="row">3</th>
-                    <td>Name3</td>
-                    <td>65</td>
-                    <td>SD</td>
-                  </tr>
-                  <tr>
-                    <th scope="row">4</th>
-                    <td>Name4</td>
-                    <td>74</td>
-                    <td>Des</td>
-                  </tr>
-                  <tr>
-                    <th scope="row">5</th>
-                    <td>Name5</td>
-                    <td>68</td>
-                    <td>ED</td>
-                  </tr>
-                  <tr>
-                    <th scope="row">6</th>
-                    <td >Name6</td>
-                    <td>55</td>
-                    <td>SD</td>
-
-                  </tr>
-                  <tr>
-                    <th scope="row">7</th>
-                    <td>Name7</td>
-                    <td>12</td>
-                    <td>FD</td>
-                  </tr>
+                  
                   
                 </tbody>
               </table>
